fonctionnel, jessaie de trouver la longueur des paths

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </head>
     <body>
         
-	<canvas id="rootCanvas" width="1000" height="600"></canvas>
-	<button id="ctrl">Go</button>
-	<button id="draw">Draw to canvas</button>
+	<canvas id="rootCanvas" width="1600" height="600"></canvas>
+
+	<button id="ctrl">Dessine moué</button>
 
 
 	
@@ -32,7 +32,9 @@
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/vendor/greensock/TweenMax.min.js"></script>
 	<script src="js/vendor/easel.js"></script>
-	<script src="js/lagrange/drawing/SVGUtils.js"></script>
+	<script src="js/lagrange/drawing/Path.js"></script>
+	<script src="js/rose/drawing/DrawPath.js"></script>
+	<script src="js/rose/drawing/Alphabet.js"></script>
 	<script src="js/main.js"></script>
 
     </body>
