--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </head>
     <body>
         
-	<canvas id="rootCanvas" width="1600" height="600"></canvas>
+	<!--<canvas id="rootCanvas" width="1600" height="600"></canvas>-->
+
+	<div id="svg"></div>
 
 	<button id="ctrl">Dessine moué</button>
 
@@ -32,6 +34,7 @@
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/vendor/greensock/TweenMax.min.js"></script>
 	<script src="js/vendor/easel.js"></script>
+	<script src="js/vendor/raphael-min.js"></script>
 	<script src="js/lagrange/drawing/Path.js"></script>
 	<script src="js/rose/drawing/DrawPath.js"></script>
 	<script src="js/rose/drawing/Alphabet.js"></script>
