--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 	<script src="js/lagrange/drawing/Path.js"></script>
 	<script src="js/rose/drawing/DrawPath.js"></script>
 	<script src="js/rose/drawing/Alphabet.js"></script>
+	<script src="js/rose/drawing/VectorWord.js"></script>
+	<script src="js/rose/drawing/DrawGroup.js"></script>
 	<script src="js/main.js"></script>
 
     </body>
