--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 		<meta name="author" content="La Grange">
 
 		<link rel="icon" type="image/png" href="img/favicon.png" />
-		<script src="js/vendor/modernizr.js"></script>
         
         <script>
             (function(ns){
-                
             })(window.traceLineFw = window.traceLineFw || {});
+
+
+            window.GreenSockGlobals = {};
+
         </script>
 
         <title>Trace Line</title>
@@ -28,17 +30,7 @@
 	<button id="ctrl">Dessine moué</button>
 
 
-	
-	<script src="js/vendor/es5-shim.js"></script>
-	<script src="js/vendor/es5-sham.js"></script>
-	<script src="js/vendor/jquery.js"></script>
-	<script src="js/vendor/greensock/TweenMax.min.js"></script>
-	<script src="js/vendor/easel.js"></script>
-	<script src="js/vendor/raphael-min.js"></script>
-	<script src="js/lagrange/drawing/Path.js"></script>
-	<script src="js/rose/drawing/DrawPath.js"></script>
-	<script src="js/rose/drawing/Alphabet.js"></script>
-	<script src="js/rose/drawing/VectorWord.js"></script>
+	<script src="js/common.js"></script>
 	<script src="js/main.js"></script>
 
     </body>
