function to find ease points

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
         <title>Trace Line</title>
     </head>
     <body>
-        
+      <div id="brp"></div>
 	<!--<canvas id="rootCanvas" width="1600" height="600"></canvas>-->
 
 	<div id="svg"></div>
 
 	<button id="ctrl">Dessine moué</button>
+	<button id="getbrp">Sette moué les breakpoints</button>
 
 
 	<script src="js/common.js"></script>
