--- a/index.html
+++ b/index.html
@@ -17,16 +17,23 @@
 
         </script>
 
+        <style>
+        	svg {
+        		border:1px grey solid;
+        	}
+        </style>
+
         <title>Trace Line</title>
     </head>
     <body>
       <div id="brp"></div>
 	<!--<canvas id="rootCanvas" width="1600" height="600"></canvas>-->
 
-	<div id="svg"></div>
 
 	<button id="ctrl">Dessine moué</button>
 	<button id="getbrp">Sette moué les breakpoints</button>
+
+	<div id="svg"></div>
 
 
 	<script src="js/common.js"></script>
