--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         </script>
 
         <style>
-        	svg {
+        	#svg {
         		border:1px grey solid;
+                width:600px;
+                height: 400px;
         	}
         </style>
 
